feat: api method, which return all avalaible metrics
